Vaadin 24 Add some tests with Playwright Fix an issue with attach/detach